# OOP_HW

./: README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: categories.py  create_class.py  product.py
tests/: conftest.py  test_categories.py  test_create_class.py  test_product.py
